--- a/index.html
+++ b/index.html
@@ -79,3 +79,14 @@
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
+
+
+
+  <!--
+    🚫 Authorized use only. No reproduction.
+
+  This source code is the property of TRD Pvt. Ltd. Modification of the code is permitted; however,
+    reproduction, copying, or distribution of this code, in whole or in part, without prior written authorization
+     is strictly prohibited
+     
+     -->
